# handshaker

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT-MAP.md  Cargo.toml  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/rules/: archiving-completed-work.md  commit-messages.md  specs-plans-language.md  squashing-feature-branches.md  ui-strings.md
.github/workflows/: release.yml
.sandcastle/: Dockerfile  implement-prompt.md  main.ts  merge-prompt.md  plan-prompt.md  prompt.md
crates/handshaker-core/: CONTEXT.md  Cargo.toml
crates/handshaker-core/src/: bundle.rs  error.rs  lib.rs  send.rs  ui_state.rs
crates/handshaker-core/src/auth/: mod.rs  oauth2.rs
crates/handshaker-core/src/base64/: mod.rs
crates/handshaker-core/src/collections/: file_store.rs  ids.rs  in_memory.rs  mod.rs  resolve.rs  store.rs  tree.rs
crates/handshaker-core/src/env/: file_store.rs  in_memory.rs  mod.rs
crates/handshaker-core/src/grpc/: connection.rs  contract.rs  contract_cache.rs  descriptor.rs  error_class.rs  file_contract_cache.rs  mod.rs  testing.rs
crates/handshaker-core/src/grpc/catalog/: build.rs  mod.rs
crates/handshaker-core/src/grpc/invoke/: lenient.rs  mod.rs  schema.rs  skeleton.rs  status_details.rs  well_known.rs
crates/handshaker-core/src/grpc/reflection/: algorithm.rs  fallback.rs  mod.rs  v1.rs  v1alpha.rs
crates/handshaker-core/src/grpc/transport/: codec.rs  mod.rs  tonic_impl.rs
crates/handshaker-core/src/persist/: mod.rs
crates/handshaker-core/src/vars/: builtins.rs  mod.rs
crates/handshaker-core/tests/: collections_persistence.rs  common_smoke.rs  contract_activate.rs  contract_cache.rs  invoke_codec.rs  invoke_live.rs  invoke_skeleton.rs  invoke_status.rs  invoke_trailers.rs  invoke_unary.rs  reflection_disabled.rs  reflection_v1.rs  reflection_v1alpha_fallback.rs  vars_end_to_end.rs
crates/handshaker-core/tests/common/: mod.rs
docs/adr/: 0001-send-resolves-in-core.md
docs/agents/: domain.md  issue-tracker.md  session-cadence.md
docs/design_handoff_handshaker/: Handshaker.html  README.md  app.jsx  browser.jsx  collection-overview.jsx  data.js  icons.jsx  modals.jsx  panels.jsx  shadcn.jsx  sidebar.jsx  styles.css
docs/superpowers/errata/: 2026-05-27-plan-03-ui-polish.md  2026-05-27-plan-04-env-vars.md
docs/superpowers/plans/: 2026-05-26-plan-01-skeleton.md  2026-05-27-plan-02-reflection-spine.md  2026-05-27-plan-04b-multi-env-switcher.md  2026-05-28-design-handoff.md  2026-06-03-plan-01-workflow-focus-call.md  2026-06-03-plan-02-catalog-and-navigation.md  2026-06-03-plan-03-workflow-and-view-modes.md  2026-06-03-plan-04-response-viewer-and-copy.md  2026-06-03-plan-05-env-auth-metadata.md  2026-06-04-plan-04b-postman-json-response-render.md  2026-06-05-draft-address-bar-redesign.md  2026-06-05-plan-00-index.md  2026-06-05-plan-01-backend-schema.md  2026-06-05-plan-02-contract-cache-persistence.md  2026-06-05-plan-03-pure-functions.md  2026-06-05-plan-05-sidebar.md  2026-06-05-plan-06-create-save-flow.md  2026-06-05-plan-07-overview-and-palette.md  2026-06-05-plan-08-dnd.md  2026-06-05-plan-10-save-flow-integration.md  2026-06-05-plan-11-save-dialog-redesign.md  2026-06-05-plan-draft-breadcrumb-and-tabs-refactor.md  2026-06-06-plan-02-shadcn-foundation.md  2026-06-06-plan-typed-toasts.md  2026-06-06-plan-unified-body-view.md  2026-06-07-auto-update.md  2026-06-08-macos-titlebar.md  2026-06-08-resizable-body-panes.md  2026-06-09-body-request-preserve-reset.md  2026-06-09-check-for-updates-button.md  2026-06-09-ui-animations.md  2026-06-10-body-autocomplete-schema.md  2026-06-10-contract-view.md  2026-06-10-env-switcher-reorder.md  2026-06-11-contract-tab-proto-view.md  2026-06-11-env-editor-improvements.md  2026-06-12-contract-unified-view.md  2026-06-12-oauth2-client-credentials.md  2026-06-12-ui-polish-batch2.md  2026-06-13-collection-vars-resolve.md  (+24 more)
docs/superpowers/specs/: 2026-05-27-plan-03-dynamic-invoke-design.md  2026-05-27-plan-03-ui-polish-design.md  2026-05-27-plan-04b-multi-env-switcher-design.md  2026-06-04-postman-style-json-response-render-design.md  2026-06-06-collection-sidebar-improvements-design.md  2026-06-06-typed-toasts-design.md  2026-06-07-auto-update-design.md  2026-06-09-body-request-preserve-reset-design.md  2026-06-09-check-for-updates-button-design.md  2026-06-09-ui-animations-design.md  2026-06-10-body-autocomplete-schema-design.md  2026-06-10-contract-view-design.md  2026-06-10-env-switcher-reorder-design.md  2026-06-11-contract-tab-proto-view-design.md  2026-06-12-oauth2-client-credentials-design.md  2026-06-12-ui-polish-batch2-design.md  2026-06-13-collection-vars-resolve-design.md  2026-06-13-env-cycle-hotkey-design.md  2026-06-14-startup-splash-screen-design.md  (+25 more)
scripts/: bump-version.mjs  release.mjs  version.mjs  version.test.mjs
src/: App.tsx  CONTEXT.md  main.tsx
src-tauri/: CONTEXT.md  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export_bindings.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  base64.rs  bundle.rs  collection.rs  dialog.rs  env.rs  events.rs  grpc.rs  meta.rs  mod.rs  ui_state.rs  vars.rs
src-tauri/src/ipc/: auth.rs  base64.rs  bundle.rs  catalog.rs  collection.rs  env.rs  error.rs  invoke.rs  mod.rs  schema.rs  target.rs  ui_state.rs  vars.rs
src/app/: WorkflowApp.test.tsx  WorkflowApp.tsx
src/components/ui/: badge.tsx  (+27 more)
src/ipc/: bindings.ts  client.collectionAuth.test.ts  client.grpcSchema.test.ts  client.moveAcross.test.ts  client.ts  client.uiState.test.ts  events.ts
src/lib/: clipboard.test.ts  clipboard.ts  download.test.ts  download.ts  focusRing.ts  grpc-status.test.ts  grpc-status.ts  ids.ts  messages.ts  method-kind.ts  monaco.ts  platform.test.ts  platform.ts  toast.test.ts  toast.ts  use-busy-delay.test.ts  use-busy-delay.ts  use-fullscreen.test.ts  use-fullscreen.ts  use-prefs.test.ts  use-prefs.ts  wellKnown.ts
src/styles/: globals.css
src/test/: setup.ts
(+543 files in other folders)
