[workspace]
members = ["crates/handshaker-core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
authors = ["Handshaker Authors"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"

# Pinned at workspace level for reuse in plans #2-#6.
tonic = "0.14"
tonic-reflection = "0.14"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }

# Plan #2 — Reflection spine
tokio-stream = "0.1"
tonic-health = "0.14"   # dev-only filler service for bare-server integration tests

# Plan #4 — Env + Vars
regex = "1"

# Plan #6 — Collections
uuid = { version = "1", features = ["v7", "serde"] }
tempfile = "3"

# Tauri runtime + bindings generator
tauri = { version = "2.11", features = [] }
tauri-build = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
