[workspace]
members = ["crates/handshaker-core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Handshaker Authors"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` makes serde_json's `Value::Object` an IndexMap (insertion order)
# instead of the default BTreeMap (alphabetical). Tauri's IPC layer serializes
# command results through `serde_json::to_value`, so without this the IndexMap order
# of env/collection variables is silently re-sorted alphabetically on the way to the
# WebView (and back through arg `from_value`). Feature unification applies it to
# tauri's own serde_json too. See src-tauri/src/ipc/env.rs regression test.
serde_json = { version = "1", features = ["preserve_order"] }
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"

# Pinned at workspace level for reuse in plans #2-#6.
tonic = "0.14"
tonic-reflection = "0.14"
tonic-types = "0.14"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }

# Plan #2 — Reflection spine
tokio-stream = "0.1"
tonic-health = "0.14"   # dev-only filler service for bare-server integration tests

# Plan #4 — Env + Vars
regex = "1"
# Insertion-order-preserving map for env/collection variables (round-trips order).
indexmap = { version = "2", features = ["serde"] }

# Plan #6 — Collections
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tempfile = "3"

# OAuth2 token fetch — rustls TLS, no OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
wiremock = "0.6"

# Base64 value decoder (response viewer)
base64 = "0.22"
infer = "0.19"

# Tauri runtime + bindings generator
tauri = { version = "2.11", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# macOS traffic-light centering (set_traffic_lights_inset) — repositions native
# window controls and re-applies on resize/fullscreen-exit. macOS-only at the call site.
tauri-plugin-decorum = "1"
tauri-plugin-dialog = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "=0.0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
