[package]
name = "handshaker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Handshaker desktop app (Tauri shell)."

[lib]
name = "handshaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
handshaker-core = { path = "../crates/handshaker-core" }
tauri = { workspace = true, features = ["devtools"] }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
