[package]
name = "handshaker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Handshaker desktop app (Tauri shell)."
default-run = "handshaker"

[lib]
name = "handshaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export-bindings"
path = "src/bin/export_bindings.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
handshaker-core = { path = "../crates/handshaker-core" }
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
async-trait.workspace = true
uuid = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
