[package]
name = "handshaker"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Handshaker desktop app (Tauri shell)."
default-run = "handshaker"

[lib]
name = "handshaker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Dev-only bindings generator. Two things keep it out of `tauri build`'s bundle:
#   1. `required-features` — tauri-cli skips explicit [[bin]] targets whose features
#      are off, so this isn't built by default.
#   2. The source lives in `src/` (NOT `src/bin/`) on purpose: tauri-cli ALSO scans
#      `src/bin/*.rs` and bundles a binary per file-stem with NO feature filtering,
#      which previously added a phantom `export_bindings` the universal-apple-darwin
#      bundler then failed to copy (it isn't lipo'd).
# Run it with:
#   cargo run -p handshaker --bin export-bindings --features export-bindings
[[bin]]
name = "export-bindings"
path = "src/export_bindings.rs"
required-features = ["export-bindings"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
handshaker-core = { path = "../crates/handshaker-core" }
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-decorum = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time"] }
async-trait.workspace = true
uuid = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Opt-in flag that enables the `export-bindings` helper binary (see [[bin]] above).
export-bindings = []
