[package]
name = "handshaker-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OS-independent core for Handshaker: gRPC reflection, dynamic invoke, auth, collections."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
thiserror.workspace = true
serde.workspace = true
