[package]
name = "handshaker-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OS-independent core for Handshaker: gRPC reflection, dynamic invoke, auth, collections."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
async-trait.workspace = true

# gRPC + reflection + descriptors
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
tonic-reflection.workspace = true  # default `server` feature gives client + server-builder for tests
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true     # features ["serde"] from workspace

# Plan #4 — Env + Vars
regex.workspace = true

# Plan #6 — Collections
uuid = { workspace = true }

# OAuth2 client-credentials token fetch
reqwest.workspace = true
base64 = "0.22.1"
infer = "0.19.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic-health.workspace = true
tower = "0.5"
tempfile.workspace = true
wiremock.workspace = true
